--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-cookie": "^7.1.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
+    "react-to-pdf": "^2.0.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
